# gpui-liveplot

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: advanced.rs  append_only.rs  basic.rs  gpui_demo.rs  linked_p0.rs  linked_p1.rs  multi_series.rs  pins.rs  realtime_append.rs  shared_series.rs  showcase.rs  time_axis.rs
src/: axis.rs  geom.rs  gpui_backend.rs  interaction.rs  lib.rs  plot.rs  series.rs  style.rs  transform.rs  view.rs
src/datasource/: mod.rs  store.rs  summary.rs
src/gpui_backend/: config.rs  constants.rs  frame.rs  geometry.rs  hover.rs  link.rs  mod.rs  paint.rs  state.rs  text.rs  view.rs
src/render/: mod.rs
