[package]
name = "gpui_plot"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = []
time = ["dep:time"]
gpui = ["dep:gpui"]

[dependencies]
gpui = { version = "0.2.2", optional = true }
time = { version = "0.3.47", optional = true, features = ["formatting", "local-offset"] }
